changes to blog

--- a/src/app.css
+++ b/src/app.css
@@ -182,6 +182,7 @@ p {
     --secondary-05-color: #60626c7b;
 
     --dark-blue: #050827;
+    --light-gray: #f6f6f6;
     --gray-color: #80808043;
     --brown-color: #a25f4b;
     --brown-05-color: #a25f4b73;
