--- a/src/app.css
+++ b/src/app.css
@@ -178,14 +178,18 @@ p {
 :root {
     --primary-color: #1d1f2e;
     --primary-05-color: #1d1f2e28;
+    --primary-01-color: #1d1f2e03;
     --secondary-color: #60626c;
     --secondary-05-color: #60626c7b;
 
     --dark-blue: #050827;
     --light-gray: #f6f6f6;
     --gray-color: #80808043;
+
     --brown-color: #a25f4b;
     --brown-05-color: #a25f4b73;
+    --brown-03-color: #a25f4b41;
+    --brown-01-color: #a25f4b0e;
 
     --container-small: 1000px;
     --container-big: 1260px;
