end contact, start individual product

--- a/src/app.css
+++ b/src/app.css
@@ -178,6 +178,7 @@ p {
 :root {
     --primary-color: #1d1f2e;
     --primary-05-color: #1d1f2e28;
+    --primary-03-color: #1d1f2e21;
     --primary-01-color: #1d1f2e03;
     --secondary-color: #60626c;
     --secondary-05-color: #60626c7b;
