--- a/src/app.css
+++ b/src/app.css
@@ -182,6 +182,8 @@ p {
     --primary-01-color: #1d1f2e03;
     --secondary-color: #60626c;
     --secondary-05-color: #60626c7b;
+    
+    --light-gray: #fafafa;
 
     --dark-blue: #050827;
     --light-gray: #f6f6f6;
@@ -205,4 +207,6 @@ p {
     max-width: 1260px;
     margin: 0 auto;
     padding: 1rem;
+
+    /* border: 1px solid green; */
 }
