--- a/src/app.css
+++ b/src/app.css
@@ -182,7 +182,7 @@ p {
     --primary-01-color: #1d1f2e03;
     --secondary-color: #60626c;
     --secondary-05-color: #60626c7b;
-    
+
     --light-gray: #fafafa;
 
     --dark-blue: #050827;
@@ -200,6 +200,39 @@ p {
     --a-slow: all 1s ease;
     --a-medium: all .45s ease;
     --a-fast: all .18s ease;
+
+
+    /* testing new palette */
+    --primary-color: #1d1f2e;
+    /* Intense primary color */
+    --primary-05-color: #161822;
+    /* Darker shade */
+    --primary-03-color: #0d0f17;
+    /* Even darker shade */
+    --primary-01-color: #020306;
+    /* Almost black */
+
+    --secondary-color: #60626c;
+    /* Intense secondary color */
+    --secondary-05-color: #53555f;
+    /* Darker shade */
+
+    --light-gray: #fafafa;
+    /* Unchanged light gray */
+    --dark-blue: #050827;
+    /* Unchanged dark blue */
+
+    --gray-color: #808080;
+    /* Slightly lighter shade of gray */
+
+    --brown-color: #a25f4b;
+    /* Intense brown color */
+    --brown-05-color: #8b4a38;
+    /* Darker shade */
+    --brown-03-color: #662d1e;
+    /* Even darker shade */
+    --brown-01-color: #3d160b;
+    /* Almost black */
 }
 
 
